--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi app productiva</title>
+    <title>Crea Infantil - Centro Creativo</title>
     <meta name="description" content="Tu centro de productividad y creatividad, sincronizado en la nube.">
     <meta name="theme-color" content="#7B61FF">
 
