--- a/index.html
+++ b/index.html
@@ -83,7 +83,14 @@
                 <div class="tab-content" id="dashboard-content">
                     <h2 class="month-title" id="dashboardMonthTitle"></h2>
                     <div id="weekly-dashboard-grid" class="weekly-dashboard-grid"></div>
-                    <div id="daily-summary-cards"></div>
+                    <div class="card" id="daily-routines-card">
+                        <h3 id="routines-title">Rutinas para Hoy</h3>
+                        <div id="routines-list" class="item-list"></div>
+                        <div class="input-group">
+                            <input type="text" id="new-routine-input" placeholder="Añadir nueva rutina...">
+                            <button class="btn-icon btn-primary" id="add-routine-btn" title="Añadir Rutina"><svg class="icon"><use href="#icon-add"/></svg></button>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Pestaña Proyectos -->
