--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
 </head>
 <body>
-    <!-- (Tus SVGs no cambian, se mantienen igual) -->
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="icon-tasks" viewBox="0 0 24 24"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zM6 20V4h7v5h5v11H6z"/><path d="m9 17-3-3 1.41-1.41L9 14.17l4.59-4.59L15 11l-6 6z"/></symbol>
         <symbol id="icon-inbox" viewBox="0 0 24 24"><path d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 12h-4c0 1.66-1.34 3-3 3s-3-1.34-3-3H5V5h14v10z"/></symbol>
@@ -48,7 +47,6 @@
     </div>
 
     <div id="app-wrapper">
-        <!-- Barra lateral para escritorio -->
         <nav class="sidebar-nav">
             <div class="sidebar-header">
                 <h1 class="logo">Crea</h1>
@@ -83,9 +81,11 @@
                 <div class="tab-content" id="dashboard-content">
                     <h2 class="month-title" id="dashboardMonthTitle"></h2>
                     <div id="weekly-dashboard-grid" class="weekly-dashboard-grid"></div>
-                    <div class="card" id="daily-routines-card">
-                        <h3 id="routines-title">Rutinas para Hoy</h3>
-                        <div id="routines-list" class="item-list"></div>
+                    <div class="card">
+                        <h3 class="card-title" id="routines-title">Rutinas para Hoy</h3>
+                        <div class="item-list" id="routines-list">
+                            <!-- Las rutinas se renderizarán aquí -->
+                        </div>
                         <div class="input-group">
                             <input type="text" id="new-routine-input" placeholder="Añadir nueva rutina...">
                             <button class="btn-icon btn-primary" id="add-routine-btn" title="Añadir Rutina"><svg class="icon"><use href="#icon-add"/></svg></button>
