--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <symbol id="icon-logout" viewBox="0 0 24 24"><path d="M17 7l-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4V5z"/></symbol>
     </svg>
     
-    <div id="login-container" class="container">
+    <div id="login-container" class="container visible">
         <div class="login-card">
             <div class="login-illustration">
                 <svg viewBox="0 0 200 150"><rect width="200" height="150" rx="20" fill="#EAEAFB"/></svg>
